objects/GenAIGatewayResponse__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_generationRequestId__c</fullName>
        <label>KQ_generationRequestId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationResponseId__c</fullName>
        <label>KQ_generationResponseId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationRequestId__c</fullName>
        <label>generationRequestId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationResponseId__c</fullName>
        <label>generationResponseId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parameters__c</fullName>
        <label>parameters</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>